--- a/examples/phinappy.html
+++ b/examples/phinappy.html
@@ -369,7 +369,7 @@ phina.define('GameOverDialog', {
     }.bind(this);
     this.btnShare.onclick = function() {
       var url = Twitter.createURL({
-        text: 'キャラが一通り揃ったので記念にゲーム作りました♪ SCORE: {score}'.format(options),
+        text: 'phina.js のマスコットキャラ素材が一通り揃ったので記念にゲーム作りました♪ SCORE: {score}'.format(options),
         hashtags: 'js,game,phina_js',
         url: location.href,
       });
