fix interval in function

--- a/test/common/index.html
+++ b/test/common/index.html
@@ -35,6 +35,7 @@
 <script src='src/core/number.js'></script>
 <script src='src/core/string.js'></script>
 <script src='src/core/array.js'></script>
+<script src='src/core/function.js'></script>
 <script src='src/core/date.js'></script>
 
 <script src='src/util/index.js'></script>
