--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="${description}" />
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jade/1.3.1/jade.min.js"></script>
-    <script src="http://rawgit.com/phi-jp/riot/build/dist/riot/riot+compiler.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/phi-jp/riot/riot+compiler.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/superagent/0.15.7/superagent.js"></script>
     <script src="http://cdn.rawgit.com/phi-jp/high/0.0.3/high.js"></script>
 
@@ -41,5 +41,7 @@
 </script>
 
 <script>
-  riot.mount('app');
+  setTimeout(() => {
+    riot.mount('app');
+  }, 1000);
 </script>
